added Q's to readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -22,6 +22,16 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
     - MSEE (mean squared explanation error?) versus locality metric which would need to be computed via the perturbations
     - Do we want to think of a metric that is stand alone? - not just for comparisons
 
+**Sandia**
+
+- I had a phone interview with them
+- Did you get an email from them for a reference?
+     
+**Graphics Group**
+
+- Adam's visit: parking, coffee/lunch, dinner, etc.
+- Di's email
+
 ## To Do List
 
 - draft methods section of the paper
