added another talking point

--- a/README.Rmd
+++ b/README.Rmd
@@ -37,6 +37,7 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 **Graphics Group**
 
 - treats for Yihui's talk?
+- did you have any resources for gganimate? (check out my slides so far)
 
 ## To Do List
 
