updated list of questions

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,14 +16,8 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 **LIME** 
 
-- Completed: 
-    - connected limeaid to my forked version of lime
-    - added sine example and analysis of default LIME explanations to paper
-    - started section on heatmap plot
-- What do you think of my work on the methods section so far?
 - Should we schedule my oral prelim, or should we keep waiting until I get closer to finishing the paper?
 - What names should I give to the diagnostic plots?
-- Color themes for the paper?
 - Could you help me with the interpretation of the default LIME explanations?
 - Metrics:
     - MSEE (mean squared explanation error?) versus locality metric which would need to be computed via the perturbations
@@ -31,12 +25,10 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 **Sandia**
 
-- I had a phone interview with them
-- Did you get an email from them for a reference?
+- Reference?
      
 **Graphics Group**
 
-- treats for Yihui's talk?
 - did you have any resources for gganimate? (check out my slides so far)
 
 ## To Do List
