--- a/README.Rmd
+++ b/README.Rmd
@@ -25,6 +25,7 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 **Sandia**
 
+- full time?
 - Reference?
      
 **Graphics Group**
