updated talking points

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,16 +16,7 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 **LIME** 
 
-- Can we talk about the LIME assumptions?
-- What names should I give to the diagnostic plots?
-- Could you help me with the interpretation of the default LIME explanations?
-- Metrics:
-    - MSEE (mean squared explanation error?) versus locality metric which would need to be computed via the perturbations
-    - Do we want to think of a metric that is stand alone? - not just for comparisons
-
 **Graphics Group**
-
-- Treats?
 
 **Sandia**
 
@@ -33,6 +24,7 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 - draft paper
 - start organizing literature review paper
+- set up dissertation R markdown document
 
 ## Oral Prelim
 
